[project]
name = "content-autopilot"
version = "0.1.0"
description = "Autonomous content arbitrage system - Autopilot by Kairox AI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "anthropic[bedrock]>=0.42.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "feedparser>=6.0.0",
    "pydantic-settings>=2.6.0",
    "python-frontmatter>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "jinja2>=3.1.0",
    "boto3>=1.26.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
